fix missing window.catalog

--- a/view.html
+++ b/view.html
@@ -15,7 +15,7 @@
 <style>
   body { font-family: sans-serif; padding: 20px; }
   #results { margin-top: 20px; color: #c00; }
-  #preset { width: 100%; min-height: 300px; border: 1px solid #ccc; }
+  #preset { width: 100%; min-height: 300px; display: flex; flex-direction: column; align-items: center; }
 </style>
 </head>
 
@@ -38,6 +38,7 @@
 </div>
 
 <!-- SCRIPT CORE -->
+<script src="test-plex.js"></script>
 <script src="utils.js"></script>
 <script src="fullscreen-menu.js"></script>
 <script src="nav.js"></script>
@@ -47,16 +48,18 @@
 (async function () {
 
   const resultsDiv = document.getElementById('results');
-  const pedalboardDiv = document.getElementById('preset');
   window.resultsDiv = resultsDiv;
 
   /* ================= LOGIN ================= */
   async function doLogin(username, password) {
-    const res = await fetch('https://www.cineteatrosanluigi.it/plex/USER_LOGIN.php', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ username, password })
-    });
+    const res = await fetch(
+      'https://www.cineteatrosanluigi.it/plex/USER_LOGIN.php',
+      {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ username, password })
+      }
+    );
     if (!res.ok) throw new Error('Login failed');
     const data = await res.json();
     localStorage.setItem('authToken', data.token);
@@ -67,10 +70,13 @@
 
   if (token) {
     try {
-      const res = await fetch('https://www.cineteatrosanluigi.it/plex/USER_CHECK_AUTH_JWT.php', {
-        method: 'POST',
-        headers: { 'Authorization': 'Bearer ' + token }
-      });
+      const res = await fetch(
+        'https://www.cineteatrosanluigi.it/plex/USER_CHECK_AUTH_JWT.php',
+        {
+          method: 'POST',
+          headers: { 'Authorization': 'Bearer ' + token }
+        }
+      );
       if (!res.ok) throw new Error();
       window.currentUser = await res.json();
     } catch {
@@ -95,7 +101,7 @@
     token = localStorage.getItem('authToken');
   }
 
-  /* ================= PEDALE ================= */
+  /* ================= DATA ================= */
   const pedalId = new URLSearchParams(location.search).get('id');
   if (!pedalId) {
     resultsDiv.textContent = 'Usa ?id=<PEDAL_ID>';
@@ -103,51 +109,47 @@
   }
 
   async function fetchPedals(ids) {
-    const res = await fetch('https://www.cineteatrosanluigi.it/plex/GET_PEDALS_BY_IDS.php', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json',
-        'Authorization': 'Bearer ' + token
-      },
-      body: JSON.stringify({ ids })
-    });
-    if (!res.ok) throw new Error('HTTP ' + res.status);
-    return (await res.json()).docs || [];
+    try {
+      const res = await fetch(
+        'https://www.cineteatrosanluigi.it/plex/GET_PEDALS_BY_IDS.php',
+        {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            'Authorization': 'Bearer ' + token
+          },
+          body: JSON.stringify({ ids })
+        }
+      );
+      if (!res.ok) throw new Error('HTTP ' + res.status);
+      return (await res.json()).docs || [];
+    } catch (err) {
+      console.error('[TEST-PLEX] Error fetching pedals:', err);
+      resultsDiv.textContent = 'Errore nel fetch dei pedali: ' + err.message;
+      return [];
+    }
   }
 
-  async function fetchPresets(pedalId) {
-    const res = await fetch('https://www.cineteatrosanluigi.it/plex/GET_PRESETS_BY_PEDAL.php', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json',
-        'Authorization': 'Bearer ' + token
-      },
-      body: JSON.stringify({ pedalId }) // <-- chiave corretta!
-    });
-    if (!res.ok) throw new Error('HTTP ' + res.status);
-    return (await res.json()).presets || [];
-  }
-
-  // Pedale principale
+  // Fetch pedale principale
   const [pedal] = await fetchPedals([pedalId]);
   if (!pedal) {
     resultsDiv.textContent = 'Pedale non trovato';
     return;
   }
 
-  // Subplex
+  // Fetch subplex
   let subplexDocs = [];
   if (pedal.subplex?.length) {
-    subplexDocs = await fetchPedals(pedal.subplex.map(s => s.pedal_id));
+    const subIds = pedal.subplex.map(s => s.pedal_id);
+    subplexDocs = await fetchPedals(subIds);
   }
-
-  // Presets
-  const presets = await fetchPresets(pedalId);
 
   /* ================= CATALOG ================= */
   window.catalogMap = {};
   window.catalogMap[pedalId] = pedal;
   subplexDocs.forEach(p => window.catalogMap[p._id] = p);
+
+  window.catalog = [pedal, ...subplexDocs]; // necessario per renderFullPedalboard
 
   /* ================= FAKE BOARD ================= */
   const fakeBoard = {
@@ -157,18 +159,17 @@
       pedal_id: pedalId,
       row: 1,
       rotation: 0,
-      subplex: pedal.subplex || [],
-      presets
+      subplex: pedal.subplex || []
     }]
   };
 
   /* ================= RENDER ================= */
-  if (!window.renderFullPedalboard || !pedalboardDiv) {
-    resultsDiv.textContent = 'Funzione renderFullPedalboard non trovata o div mancante';
-    return;
+  try {
+    await renderFullPedalboard(fakeBoard);
+  } catch (err) {
+    console.error('[TEST-PLEX] Render error:', err);
+    resultsDiv.textContent = 'Errore nel render: ' + err.message;
   }
-
-  await renderFullPedalboard(fakeBoard);
 
 })();
 </script>
