--- a/plexes.html
+++ b/plexes.html
@@ -121,6 +121,19 @@
 
 
     <div class="zoom-controls">
+
+      <!-- Link support PayPal a sinistra -->
+      <a href="https://paypal.me/lucacrippa88" target="_blank" 
+        class="bx--btn bx--btn--tertiary bx--btn--sm" 
+        style="display: flex; align-items: center; gap: 4px;">
+        <svg width="16" height="16" viewBox="0 0 32 32" fill="currentColor">
+          <path d="M16 0C7.163 0 0 7.163 0 16s7.163 16 16 16 16-7.163 16-16S24.837 0 16 0zm0 29C8.268 29 3 23.732 3 16S8.268 3 16 3s13 5.268 13 13-5.268 13-13 13z"/>
+          <path d="M12 10h4v12h-4z"/>
+        </svg>
+        Support PedalPlex
+      </a>
+
+
       <button id="zoomIn" class="bx--btn bx--btn--tertiary bx--btn--sm bx--btn--icon-only" onclick="zoomIn()">
         <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
           <path d="M18 12L14 12 14 8 12 8 12 12 8 12 8 14 12 14 12 18 14 18 14 14 18 14 18 12z"></path><path d="M21.4479,20A10.856,10.856,0,0,0,24,13,11,11,0,1,0,13,24a10.856,10.856,0,0,0,7-2.5521L27.5859,29,29,27.5859ZM13,22a9,9,0,1,1,9-9A9.01,9.01,0,0,1,13,22Z"></path>
