--- a/plexes.html
+++ b/plexes.html
@@ -125,12 +125,11 @@
       <!-- Link support PayPal a sinistra -->
       <a href="https://paypal.me/lucacrippa88" target="_blank" 
         class="bx--btn bx--btn--ghost bx--btn--sm" 
-        style="position: fixed;
-                left: 10px;
+        style="position: absolute;
+                left: 20px;
                 top: 50%;
                 transform: translateY(-50%);
-                background-color: #0070ba; /* blu PayPal */
-                color: #a3a3a3;
+                color: #0070ba;
                 padding: 8px 12px;
                 border-radius: 4px;
                 font-family: sans-serif;
