--- a/plexes.html
+++ b/plexes.html
@@ -129,7 +129,7 @@
                 left: 20px;
                 top: 50%;
                 transform: translateY(-50%);
-                color: #0070ba;
+                color: #a3a3a3;
                 padding: 8px 12px;
                 border-radius: 4px;
                 font-family: sans-serif;
@@ -137,10 +137,9 @@
                 font-weight: bold;
                 z-index: 1000;">
         <svg width="16" height="16" viewBox="0 0 32 32" fill="currentColor">
-          <path d="M16 0C7.163 0 0 7.163 0 16s7.163 16 16 16 16-7.163 16-16S24.837 0 16 0zm0 29C8.268 29 3 23.732 3 16S8.268 3 16 3s13 5.268 13 13-5.268 13-13 13z"/>
-          <path d="M12 10h4v12h-4z"/>
+          <path d="M13 11H20V13H13z"></path><path d="M29,13H26.98A5.7791,5.7791,0,0,0,25,8.8525V5a1,1,0,0,0-1.6-.8L19.6665,7H15c-5.5095,0-9.4634,3.2412-9.9485,8H5a1.0009,1.0009,0,0,1-1-1V12H2v2a3.0033,3.0033,0,0,0,3,3h.07A9.1733,9.1733,0,0,0,9,23.5566V27a1,1,0,0,0,1,1h4a1,1,0,0,0,1-1V25h3v2a1,1,0,0,0,1,1h4a1,1,0,0,0,1-1V23.6372A5.0928,5.0928,0,0,0,26.8188,20H29a1,1,0,0,0,1-1V14A1,1,0,0,0,29,13Zm-1,5H25.124c-.3052,2.7529-.8235,3.4854-3.124,4.3154V26H20V23H13v3H11V22.3779A7.0129,7.0129,0,0,1,7,16c0-4.8354,4.0181-7,8-7h5.3335L23,7V9.7764c2.4182,1.8593,1.9126,3.186,2.0183,5.2236H28Z"></path><title>Piggy bank slot</title>
         </svg>
-        Support PedalPlex
+        Support
       </a>
 
 
