changed php fetch with pedalplex api

--- a/view-gear.html
+++ b/view-gear.html
@@ -97,7 +97,7 @@
 
   // Existing auth check
   $.ajax({
-    url: 'https://www.cineteatrosanluigi.it/plex/USER_CHECK_AUTH_JWT.php',
+    url: 'https://api.pedalplex.com/USER_CHECK_AUTH_JWT.php',
     method: 'GET',
     dataType: 'json',
     headers: { 'Authorization': 'Bearer ' + token },
