--- a/profile.html
+++ b/profile.html
@@ -73,7 +73,7 @@
     }
 
     $.ajax({
-      url: 'https://www.cineteatrosanluigi.it/plex/USER_CHECK_AUTH_JWT.php',
+      url: 'https://api.pedalplex.com/USER_CHECK_AUTH_JWT.php',
       method: 'GET',
       dataType: 'json',
       headers: { 'Authorization': 'Bearer ' + token },
@@ -109,7 +109,7 @@
       const token = localStorage.getItem('authToken');
 
       $.ajax({
-        url: 'https://www.cineteatrosanluigi.it/plex/USER_CHANGE_PASSWORD.php',
+        url: 'https://api.pedalplex.com/USER_CHANGE_PASSWORD.php',
         type: 'POST',
         contentType: 'application/json',
         headers: { 'Authorization': 'Bearer ' + token },
@@ -143,7 +143,7 @@
       const token = localStorage.getItem('authToken'); // JWT utente
 
       $.ajax({
-        url: 'https://www.cineteatrosanluigi.it/plex/USER_LINK_GOOGLE.php',
+        url: 'https://api.pedalplex.com/USER_LINK_GOOGLE.php',
         type: 'POST',
         contentType: 'application/json',
         headers: { 'Authorization': 'Bearer ' + token },
