--- a/rigs.html
+++ b/rigs.html
@@ -217,7 +217,7 @@
 
     // Attempt server auth
     $.ajax({
-      url: 'https://www.cineteatrosanluigi.it/plex/USER_CHECK_AUTH_JWT.php',
+      url: 'https://api.pedalplex.com/USER_CHECK_AUTH_JWT.php',
       method: 'GET',
       dataType: 'json',
       headers: { 'Authorization': 'Bearer ' + token },
