optimize calls to catalog

--- a/gears.html
+++ b/gears.html
@@ -130,7 +130,7 @@
     window.currentUser = { role: 'guest' };
 
     if (typeof initNavCatalog === 'function') initNavCatalog('guest');
-    if (typeof initCatalog === 'function') initCatalog('guest');
+    // if (typeof initCatalog === 'function') initCatalog('guest');
 
     return;
   }
