--- a/login.html
+++ b/login.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PedalPlex – Login / Register</title>
+  <title>PedalPlex</title>
+  <link rel="icon" href="logos/pedalplex_logo_gradient.png" type="image/x-icon">
   <link rel="stylesheet" href="css/carbon-components.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
