--- a/plexes.html
+++ b/plexes.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PedalPlex</title>
+  <link rel="icon" href="logos/pedalplex_logo_gradient.png" type="image/x-icon">
   <link rel="stylesheet" href="css/carbon-components.min.css" />
   <link rel="stylesheet" href="css/style.css" />
   <script src="https://unpkg.com/carbon-components/scripts/carbon-components.min.js"></script>
