--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PedalPlex</title>
-
+  <link rel="icon" href="logos/pedalplex_logo_gradient.png" type="image/x-icon">
   <!-- Carbon Design System -->
   <link rel="stylesheet" href="css/carbon-components.min.css">
   <!-- Your custom overrides -->
