--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
   </div>
 
 
-  <div style="margin-top:2rem; display:flex; justify-content:center; gap:1rem; flex-wrap:wrap;">
+  <!-- <div style="margin-top:2rem; display:flex; justify-content:center; gap:1rem; flex-wrap:wrap;">
     <a href="rigs" class="bx--btn bx--btn--secondary" type="button" aria-label="Start as Guest"
         style="display: flex; align-items: center; gap: 0.5rem;">
         <svg focusable="false" preserveAspectRatio="xMidYMid meet xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
@@ -468,9 +468,8 @@
         </svg>
         Sign up for Free
     </a>
-  </div>
+  </div> -->
 </section>
-
 
 
 
@@ -479,7 +478,7 @@
   <!-- Footer -->
   <footer id="footer" style="margin-top:4rem; text-align:center; padding:1rem; font-size:0.875rem; color:#aaa;">
     © <span id="year-range"></span> PedalPlex · 
-    <a href="terms">Terms</a> · <a href="privacy">Privacy</a> · <a href="#">Support</a>
+    <a href="terms">Terms</a> · <a href="privacy">Privacy</a> · <a href="mailto:support@pedalplex.com">Support</a> · Developed in Italy <span style="display: inline-block; width: 20px; height: 4px; background: linear-gradient(to right, #008C45 33.33%, #F4F5F0 33.33% 66.66%, #CD212A 66.66%); vertical-align: middle"></span>
   </footer>
 
 
