--- a/rigs.html
+++ b/rigs.html
@@ -156,7 +156,7 @@
 
     <div class="zoom-controls"> 
       <!-- Link support PayPal a sinistra -->
-      <button href="https://paypal.me/lucacrippa88" target="_blank" id="support" 
+      <a href="https://paypal.me/lucacrippa88" target="_blank" id="support" 
         class="bx--btn bx--btn--ghost bx--btn--sm preset-tooltip" type="button" aria-label="Support"
         style="display: flex; align-items: center; gap: 0.5rem; position: absolute; left: 20px; top: 50%; transform: translateY(-50%); color: #a3a3a3; z-index: 1000; font-weight:normal;">
         <svg focusable="false" preserveAspectRatio="xMidYMid meet xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
@@ -167,8 +167,8 @@
           <span style="left:90%!important;" class="preset-tooltip-text">
             PedalPlex is free and always will be. If you find it useful, you can support hosting and domain costs here.
           </span>
-      </button>
-      
+        </a>
+
       <button id="zoomIn" class="bx--btn bx--btn--tertiary bx--btn--sm bx--btn--icon-only" onclick="zoomIn()">
         <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
           <path d="M18 12L14 12 14 8 12 8 12 12 8 12 8 14 12 14 12 18 14 18 14 14 18 14 18 12z"></path><path d="M21.4479,20A10.856,10.856,0,0,0,24,13,11,11,0,1,0,13,24a10.856,10.856,0,0,0,7-2.5521L27.5859,29,29,27.5859ZM13,22a9,9,0,1,1,9-9A9.01,9.01,0,0,1,13,22Z"></path>
