--- a/index.html
+++ b/index.html
@@ -34,90 +34,66 @@
     </p>
 
     <!-- CTA buttons -->
-    <!-- <div style="margin-top:2rem; display:flex; justify-content:center; gap:1rem; flex-wrap:wrap;">
-        <a href="rigs" class="bx--btn bx--btn--tertiary" type="button" aria-label="Start as Guest"
-            style="display: flex; align-items: center; gap: 0.5rem;">
-            <svg focusable="false" preserveAspectRatio="xMidYMid meet xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
-                <path d="M6.34 19H17.65V21H6.34z" transform="rotate(-45 11.995 20.002)"></path><path d="M17,30a1,1,0,0,1-.37-.07,1,1,0,0,1-.62-.79l-1-7,2-.28.75,5.27L21,24.52V17a1,1,0,0,1,.29-.71l4.07-4.07A8.94,8.94,0,0,0,28,5.86V4H26.14a8.94,8.94,0,0,0-6.36,2.64l-4.07,4.07A1,1,0,0,1,15,11H7.48L4.87,14.26l5.27.75-.28,2-7-1a1,1,0,0,1-.79-.62,1,1,0,0,1,.15-1l4-5A1,1,0,0,1,7,9h7.59l3.77-3.78A10.92,10.92,0,0,1,26.14,2H28a2,2,0,0,1,2,2V5.86a10.92,10.92,0,0,1-3.22,7.78L23,17.41V25a1,1,0,0,1-.38.78l-5,4A1,1,0,0,1,17,30Z"></path>
-            </svg>
-            Start as Guest
-        </a>
-        <a href="login" class="bx--btn bx--btn--primary" type="button" aria-label="Login" 
-            style="display: flex; align-items: center; gap: 0.5rem;">
-            <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
-                <path d="M26,30H14a2,2,0,0,1-2-2V25h2v3H26V4H14V7H12V4a2,2,0,0,1,2-2H26a2,2,0,0,1,2,2V28A2,2,0,0,1,26,30Z"/>
-                <path d="M14.59 20.59L18.17 17 4 17 4 15 18.17 15 14.59 11.41 16 10 22 16 16 22 14.59 20.59z"/>
-            </svg>
-            PedalPlexer Login
-        </a>
-        <a href="#why-becoming-a-pedalplexer" aria-label="Why becoming a PedalPlexer?">
-          <svg style="margin-top: 10px; color: #717171; font-weight:600" focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
-            <path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path><circle cx="16" cy="23.5" r="1.5"></circle><path d="M17,8H15.5A4.49,4.49,0,0,0,11,12.5V13h2v-.5A2.5,2.5,0,0,1,15.5,10H17a2.5,2.5,0,0,1,0,5H15v4.5h2V17a4.5,4.5,0,0,0,0-9Z"></path>
-            <title>Why becoming PedalPlexer?</title>
-          </svg>
-        </a>
-    </div> -->
+    <div id="cta-buttons" style="margin-top:2rem; display:flex; justify-content:center; gap:1rem; flex-wrap:wrap;">
+      <!-- I bottoni saranno inseriti qui dinamicamente -->
+    </div>
 
-<div id="cta-buttons" style="margin-top:2rem; display:flex; justify-content:center; gap:1rem; flex-wrap:wrap;">
-  <!-- I bottoni saranno inseriti qui dinamicamente -->
-</div>
+    <script>
+      const ctaContainer = document.getElementById('cta-buttons');
 
-<script>
-  const ctaContainer = document.getElementById('cta-buttons');
+      // Funzione per creare un bottone
+      function createButton(href, classes, label, svgContent) {
+        const a = document.createElement('a');
+        a.href = href;
+        a.className = classes;
+        a.type = 'button';
+        a.setAttribute('aria-label', label);
+        a.style.display = 'flex';
+        a.style.alignItems = 'center';
+        a.style.gap = '0.5rem';
+        a.innerHTML = svgContent + label;
+        return a;
+      }
 
-  // Funzione per creare un bottone
-  function createButton(href, classes, label, svgContent) {
-    const a = document.createElement('a');
-    a.href = href;
-    a.className = classes;
-    a.type = 'button';
-    a.setAttribute('aria-label', label);
-    a.style.display = 'flex';
-    a.style.alignItems = 'center';
-    a.style.gap = '0.5rem';
-    a.innerHTML = svgContent + label;
-    return a;
-  }
+      // SVG template dei bottoni
+      const svgGuest = `<svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+          <path d="M6.34 19H17.65V21H6.34z" transform="rotate(-45 11.995 20.002)"></path>
+          <path d="M17,30a1,1,0,0,1-.37-.07,1,1,0,0,1-.62-.79l-1-7,2-.28.75,5.27L21,24.52V17a1,1,0,0,1,.29-.71l4.07-4.07A8.94,8.94,0,0,0,28,5.86V4H26.14a8.94,8.94,0,0,0-6.36,2.64l-4.07,4.07A1,1,0,0,1,15,11H7.48L4.87,14.26l5.27.75-.28,2-7-1a1,1,0,0,1-.79-.62,1,1,0,0,1,.15-1l4-5A1,1,0,0,1,7,9h7.59l3.77-3.78A10.92,10.92,0,0,1,26.14,2H28a2,2,0,0,1,2,2V5.86a10.92,10.92,0,0,1-3.22,7.78L23,17.41V25a1,1,0,0,1-.38.78l-5,4A1,1,0,0,1,17,30Z"></path>
+      </svg>`;
 
-  // SVG template dei bottoni
-  const svgGuest = `<svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
-      <path d="M6.34 19H17.65V21H6.34z" transform="rotate(-45 11.995 20.002)"></path>
-      <path d="M17,30a1,1,0,0,1-.37-.07,1,1,0,0,1-.62-.79l-1-7,2-.28.75,5.27L21,24.52V17a1,1,0,0,1,.29-.71l4.07-4.07A8.94,8.94,0,0,0,28,5.86V4H26.14a8.94,8.94,0,0,0-6.36,2.64l-4.07,4.07A1,1,0,0,1,15,11H7.48L4.87,14.26l5.27.75-.28,2-7-1a1,1,0,0,1-.79-.62,1,1,0,0,1,.15-1l4-5A1,1,0,0,1,7,9h7.59l3.77-3.78A10.92,10.92,0,0,1,26.14,2H28a2,2,0,0,1,2,2V5.86a10.92,10.92,0,0,1-3.22,7.78L23,17.41V25a1,1,0,0,1-.38.78l-5,4A1,1,0,0,1,17,30Z"></path>
-  </svg>`;
+      const svgLogin = `<svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+          <path d="M26,30H14a2,2,0,0,1-2-2V25h2v3H26V4H14V7H12V4a2,2,0,0,1,2-2H26a2,2,0,0,1,2,2V28A2,2,0,0,1,26,30Z"/>
+          <path d="M14.59 20.59L18.17 17 4 17 4 15 18.17 15 14.59 11.41 16 10 22 16 16 22 14.59 20.59z"/>
+      </svg>`;
 
-  const svgLogin = `<svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
-      <path d="M26,30H14a2,2,0,0,1-2-2V25h2v3H26V4H14V7H12V4a2,2,0,0,1,2-2H26a2,2,0,0,1,2,2V28A2,2,0,0,1,26,30Z"/>
-      <path d="M14.59 20.59L18.17 17 4 17 4 15 18.17 15 14.59 11.41 16 10 22 16 16 22 14.59 20.59z"/>
-  </svg>`;
+      const svgPlexes = `<svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+          <path d="M25,4H10A2.002,2.002,0,0,0,8,6V20.5563A3.9551,3.9551,0,0,0,6,20a4,4,0,1,0,4,4V12H25v8.5562A3.9545,3.9545,0,0,0,23,20a4,4,0,1,0,4,4V6A2.0023,2.0023,0,0,0,25,4ZM6,26a2,2,0,1,1,2-2A2.0023,2.0023,0,0,1,6,26Zm17,0a2,2,0,1,1,2-2A2.0027,2.0027,0,0,1,23,26ZM10,6H25v4H10Z"/>
+      </svg>`;
 
-  const svgPlexes = `<svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
-      <path d="M25,4H10A2.002,2.002,0,0,0,8,6V20.5563A3.9551,3.9551,0,0,0,6,20a4,4,0,1,0,4,4V12H25v8.5562A3.9545,3.9545,0,0,0,23,20a4,4,0,1,0,4,4V6A2.0023,2.0023,0,0,0,25,4ZM6,26a2,2,0,1,1,2-2A2.0023,2.0023,0,0,1,6,26Zm17,0a2,2,0,1,1,2-2A2.0027,2.0027,0,0,1,23,26ZM10,6H25v4H10Z"/>
-  </svg>`;
+      // Funzione per decodificare JWT
+      function parseJwt(token) {
+        try {
+          const base64Url = token.split('.')[1];
+          const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+          return JSON.parse(atob(base64));
+        } catch(e) {
+          return null;
+        }
+      }
 
-  // Funzione per decodificare JWT
-  function parseJwt(token) {
-    try {
-      const base64Url = token.split('.')[1];
-      const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-      return JSON.parse(atob(base64));
-    } catch(e) {
-      return null;
-    }
-  }
+      // Controllo authToken
+      const token = localStorage.getItem('authToken');
+      let currentUser = token ? parseJwt(token) : null;
 
-  // Controllo authToken
-  const token = localStorage.getItem('authToken');
-  let currentUser = token ? parseJwt(token) : null;
-
-  if (currentUser && currentUser.username) {
-    // Utente loggato: mostra bottone "Vai ai tuoi Rigs"
-    ctaContainer.appendChild(createButton('plexes', 'bx--btn bx--btn--primary', 'Go to My Plexes', svgPlexes));
-  } else {
-    // Guest / non loggato: mostra Start as Guest e Login
-    ctaContainer.appendChild(createButton('rigs', 'bx--btn bx--btn--tertiary', 'Start as Guest', svgGuest));
-    ctaContainer.appendChild(createButton('login', 'bx--btn bx--btn--primary', 'PedalPlexer Login', svgLogin));
-  }
-</script>
+      if (currentUser && currentUser.username) {
+        // Utente loggato: mostra bottone "Vai ai tuoi Rigs"
+        ctaContainer.appendChild(createButton('plexes', 'bx--btn bx--btn--primary', 'Go to My Plexes', svgPlexes));
+      } else {
+        // Guest / non loggato: mostra Start as Guest e Login
+        ctaContainer.appendChild(createButton('rigs', 'bx--btn bx--btn--tertiary', 'Start as Guest', svgGuest));
+        ctaContainer.appendChild(createButton('login', 'bx--btn bx--btn--primary', 'PedalPlexer Login', svgLogin));
+      }
+    </script>
 
 
 
@@ -452,38 +428,25 @@
   </div>
 
 
+  <div style="margin-top:2rem; display:flex; justify-content:center; gap:1rem; flex-wrap:wrap;">
   <!-- Link support PayPal a sinistra -->
-  <a href="https://paypal.me/lucacrippa88" target="_blank" id="support" 
-    class="bx--btn bx--btn--ghost bx--btn--sm preset-tooltip" type="button" aria-label="Support"
-    style="display: flex; align-items: center; gap: 0.5rem; transform: translateY(-50%); color: #a3a3a3; z-index: 1000; font-weight:normal;">
-    <svg focusable="false" preserveAspectRatio="xMidYMid meet xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
-      <path d="M13 11H20V13H13z"></path><path d="M29,13H26.98A5.7791,5.7791,0,0,0,25,8.8525V5a1,1,0,0,0-1.6-.8L19.6665,7H15c-5.5095,0-9.4634,3.2412-9.9485,8H5a1.0009,1.0009,0,0,1-1-1V12H2v2a3.0033,3.0033,0,0,0,3,3h.07A9.1733,9.1733,0,0,0,9,23.5566V27a1,1,0,0,0,1,1h4a1,1,0,0,0,1-1V25h3v2a1,1,0,0,0,1,1h4a1,1,0,0,0,1-1V23.6372A5.0928,5.0928,0,0,0,26.8188,20H29a1,1,0,0,0,1-1V14A1,1,0,0,0,29,13Zm-1,5H25.124c-.3052,2.7529-.8235,3.4854-3.124,4.3154V26H20V23H13v3H11V22.3779A7.0129,7.0129,0,0,1,7,16c0-4.8354,4.0181-7,8-7h5.3335L23,7V9.7764c2.4182,1.8593,1.9126,3.186,2.0183,5.2236H28Z"></path><title>Piggy bank slot</title>
-    </svg>
-    Support
-      <!-- Tooltip testo -->
-      <span style="left:90%!important;" class="preset-tooltip-text">
-        PedalPlex is free and always will be. If you find it useful, you can support hosting and domain costs here.
-      </span>
-    </a>
+    <a href="https://paypal.me/lucacrippa88" target="_blank" id="support" 
+      class="bx--btn bx--btn--ghost bx--btn--sm preset-tooltip" type="button" aria-label="Support"
+      style="display: flex; align-items: center; gap: 0.5rem; transform: translateY(-50%); color: #a3a3a3; z-index: 1000; font-weight:normal;">
+      <svg focusable="false" preserveAspectRatio="xMidYMid meet xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+        <path d="M13 11H20V13H13z"></path><path d="M29,13H26.98A5.7791,5.7791,0,0,0,25,8.8525V5a1,1,0,0,0-1.6-.8L19.6665,7H15c-5.5095,0-9.4634,3.2412-9.9485,8H5a1.0009,1.0009,0,0,1-1-1V12H2v2a3.0033,3.0033,0,0,0,3,3h.07A9.1733,9.1733,0,0,0,9,23.5566V27a1,1,0,0,0,1,1h4a1,1,0,0,0,1-1V25h3v2a1,1,0,0,0,1,1h4a1,1,0,0,0,1-1V23.6372A5.0928,5.0928,0,0,0,26.8188,20H29a1,1,0,0,0,1-1V14A1,1,0,0,0,29,13Zm-1,5H25.124c-.3052,2.7529-.8235,3.4854-3.124,4.3154V26H20V23H13v3H11V22.3779A7.0129,7.0129,0,0,1,7,16c0-4.8354,4.0181-7,8-7h5.3335L23,7V9.7764c2.4182,1.8593,1.9126,3.186,2.0183,5.2236H28Z"></path><title>Piggy bank slot</title>
+      </svg>
+      Support
+        <!-- Tooltip testo -->
+        <span style="left:90%!important;" class="preset-tooltip-text">
+          PedalPlex is free and always will be. If you find it useful, you can support hosting and domain costs here.
+        </span>
+      </a>
+  </div>
+
+  
 
 
-  <!-- <div style="margin-top:2rem; display:flex; justify-content:center; gap:1rem; flex-wrap:wrap;">
-    <a href="rigs" class="bx--btn bx--btn--secondary" type="button" aria-label="Start as Guest"
-        style="display: flex; align-items: center; gap: 0.5rem;">
-        <svg focusable="false" preserveAspectRatio="xMidYMid meet xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
-            <path d="M6.34 19H17.65V21H6.34z" transform="rotate(-45 11.995 20.002)"></path><path d="M17,30a1,1,0,0,1-.37-.07,1,1,0,0,1-.62-.79l-1-7,2-.28.75,5.27L21,24.52V17a1,1,0,0,1,.29-.71l4.07-4.07A8.94,8.94,0,0,0,28,5.86V4H26.14a8.94,8.94,0,0,0-6.36,2.64l-4.07,4.07A1,1,0,0,1,15,11H7.48L4.87,14.26l5.27.75-.28,2-7-1a1,1,0,0,1-.79-.62,1,1,0,0,1,.15-1l4-5A1,1,0,0,1,7,9h7.59l3.77-3.78A10.92,10.92,0,0,1,26.14,2H28a2,2,0,0,1,2,2V5.86a10.92,10.92,0,0,1-3.22,7.78L23,17.41V25a1,1,0,0,1-.38.78l-5,4A1,1,0,0,1,17,30Z"></path>
-        </svg>
-        Continue as Guest
-    </a>
-    <a href="login" class="bx--btn bx--btn--primary" type="button" aria-label="Login" 
-        style="display: flex; align-items: center; gap: 0.5rem;">
-        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
-            <path d="M26,30H14a2,2,0,0,1-2-2V25h2v3H26V4H14V7H12V4a2,2,0,0,1,2-2H26a2,2,0,0,1,2,2V28A2,2,0,0,1,26,30Z"/>
-            <path d="M14.59 20.59L18.17 17 4 17 4 15 18.17 15 14.59 11.41 16 10 22 16 16 22 14.59 20.59z"/>
-        </svg>
-        Sign up for Free
-    </a>
-  </div> -->
 </section>
 
 
