--- a/index.html
+++ b/index.html
@@ -428,19 +428,19 @@
   </div>
 
 
-  <div style="margin-top:2rem; display:flex; justify-content:center; gap:1rem; flex-wrap:wrap;">
-  <!-- Link support PayPal a sinistra -->
+  <div style="margin-top:5rem; display:flex; justify-content:center; gap:1rem; flex-wrap:wrap;">
+    <p>
+      PedalPlex is free and always will be. 
+      If you find it useful, you can support hosting and domain costs here.
+    </p><br><br>
+    <!-- Link support PayPal a sinistra -->
     <a href="https://paypal.me/lucacrippa88" target="_blank" id="support" 
-      class="bx--btn bx--btn--ghost bx--btn--sm preset-tooltip" type="button" aria-label="Support"
+      class="bx--btn bx--btn--ghost bx--btn--sm" type="button" aria-label="Support"
       style="display: flex; align-items: center; gap: 0.5rem; transform: translateY(-50%); color: #a3a3a3; z-index: 1000; font-weight:normal;">
       <svg focusable="false" preserveAspectRatio="xMidYMid meet xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
         <path d="M13 11H20V13H13z"></path><path d="M29,13H26.98A5.7791,5.7791,0,0,0,25,8.8525V5a1,1,0,0,0-1.6-.8L19.6665,7H15c-5.5095,0-9.4634,3.2412-9.9485,8H5a1.0009,1.0009,0,0,1-1-1V12H2v2a3.0033,3.0033,0,0,0,3,3h.07A9.1733,9.1733,0,0,0,9,23.5566V27a1,1,0,0,0,1,1h4a1,1,0,0,0,1-1V25h3v2a1,1,0,0,0,1,1h4a1,1,0,0,0,1-1V23.6372A5.0928,5.0928,0,0,0,26.8188,20H29a1,1,0,0,0,1-1V14A1,1,0,0,0,29,13Zm-1,5H25.124c-.3052,2.7529-.8235,3.4854-3.124,4.3154V26H20V23H13v3H11V22.3779A7.0129,7.0129,0,0,1,7,16c0-4.8354,4.0181-7,8-7h5.3335L23,7V9.7764c2.4182,1.8593,1.9126,3.186,2.0183,5.2236H28Z"></path><title>Piggy bank slot</title>
       </svg>
       Support
-        <!-- Tooltip testo -->
-        <span style="left:90%!important;" class="preset-tooltip-text">
-          PedalPlex is free and always will be. If you find it useful, you can support hosting and domain costs here.
-        </span>
       </a>
   </div>
 
