--- a/index.html
+++ b/index.html
@@ -429,11 +429,11 @@
 
 
   <div style="margin-top:5rem; display:flex; justify-content:center; gap:1rem; flex-wrap:wrap;">
-    <p>
-      PedalPlex is free and always will be. <br>
+    <p style="color:#a3a3a3;">
+      PedalPlex is free and always will be.
       If you find it useful, you can support hosting and domain costs here.
     </p>
-    <br><br><br><br>
+    <br><br><br>
     <!-- Link support PayPal a sinistra -->
     <a href="https://paypal.me/lucacrippa88" target="_blank" id="support" 
       class="bx--btn bx--btn--ghost bx--btn--sm" type="button" aria-label="Support"
