--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         </tr>
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">
-            Plexes catalog 
+            SubPlexes 
             <svg style="vertical-align:middle" class="preset-icon" focusable="false" preserveAspectRatio="xMidYMid meet" width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
               <path fill="#3a3a3a" d="M19 21v-2h1v-7h-1v-2h4v2h-1v7h1v2h-4zM15.5005 21h2l-3.5005-11h-3l-3.4966 11h1.9988l.6018-2h4.7781l.6184 2zM10.7058 17l1.6284-5.4111.2559-.0024 1.6736 5.4136h-3.5579z"></path><path fill="#3a3a3a" d="M32,32H0V0h32v32ZM2,30h28V2H2v28Z"></path>
             </svg>
@@ -392,7 +392,9 @@
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
             <!--full--><circle cx="16" cy="16" r="14"></circle>
-            </svg> # AI-generated Plexes (coming)</td>
+            </svg> 
+            <!-- # AI-generated Plexes (coming) -->
+          </td>
         </tr>
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">Rigs</td>
