--- a/login.html
+++ b/login.html
@@ -33,6 +33,10 @@
     <!-- Optional Email -->
     <input type="email" id="email" placeholder="Email" class="bx--text-input" style="display: none; margin-bottom: 10px; width: 100%;" />
 
+    <div id="recaptchaContainer">
+      <div class="g-recaptcha" data-sitekey="6LerYkksAAAAAMbhqqezJ-JOvmUVyZkQMT9Q6fm1"></div>
+    </div>
+
     <br>
 
     <!-- Submit Button -->
@@ -74,6 +78,7 @@
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <script src="nav.js"></script>
   <script src="auth.js"></script>
 
