--- a/index.html
+++ b/index.html
@@ -117,20 +117,13 @@
   "> -->
   <div class="pedalplex-glow">
     <!-- Actual table -->
-    <table class="bx--data-table bx--data-table--zebra" style="
-      width:100%; 
-      text-align:center; 
-      background-color:#3a3a3a; 
-      color:#fff; 
-      border-radius:10px; 
-      overflow:hidden;
-    ">
+    <table class="bx--data-table bx--data-table--zebra" style="width:100%; text-align:center; background-color:#3a3a3a; color:#fff; border-radius:10px; overflow:hidden;">
       <thead style="background-color:#2e2e2e; color:#fff;">
         <tr>
           <th scope="col" style="padding:12px;">Feature</th>
           <th scope="col" style="padding:12px;">Photos</th>
           <th scope="col" style="padding:12px;">MIDIs</th>
-          <th scope="col" style="padding:12px;">Plexex</th>
+          <th scope="col" style="padding:12px;">Plexes</th>
         </tr>
       </thead>
       <tbody>
