--- a/view-gear.html
+++ b/view-gear.html
@@ -42,8 +42,8 @@
       </a>  
 
     </div>
+    <h3 id="gearName" style="text-align:center;"></h3>
     <br><br>
-    <div id="gearName"></div>
     <div id="preset"></div>
     <div id="results"></div>
 
