--- a/plexes.html
+++ b/plexes.html
@@ -166,6 +166,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="test-plex.js"></script>
   <script src="plexes.js"></script>
+  <script src="subplexes.js"></script>
   <script src="utils.js"></script>
   <!-- <script src="local-plexes.js"></script> -->
   <script src="fullscreen-menu.js"></script>
