--- a/view-gear.html
+++ b/view-gear.html
@@ -53,6 +53,7 @@
     <!-- Load scripts after content is visible -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="utils.js"></script>
+    <script src="subplexes.js"></script>
     <script src="gears.js"></script>
     <script src="fullscreen-menu.js"></script>
     <script src="nav-gears.js"></script>
