--- a/plexes.html
+++ b/plexes.html
@@ -164,7 +164,7 @@
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="test-plex.js"></script>
+  <!-- <script src="test-plex.js"></script> -->
   <script src="plexes.js"></script>
   <script src="subplexes.js"></script>
   <script src="utils.js"></script>
