--- a/create.html
+++ b/create.html
@@ -9,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="css/style.css">
     <script>window.isEditMode = true;</script>
+    <script src="helpers.js"></script>
     <script src="utils.js"></script>
     <script src="create.js"></script>
     
