--- a/gears.html
+++ b/gears.html
@@ -90,6 +90,7 @@
 
     <!-- Load scripts after content is visible -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="helpers.js"></script>
     <script src="utils.js"></script>
     <script src="gears.js"></script>
     <script src="fullscreen-menu.js"></script>
