--- a/plexes.html
+++ b/plexes.html
@@ -167,6 +167,7 @@
   <!-- <script src="test-plex.js"></script> -->
   <script src="plexes.js"></script>
   <script src="subplexes.js"></script>
+  <script src="helpers.js"></script>
   <script src="utils.js"></script>
   <!-- <script src="local-plexes.js"></script> -->
   <script src="fullscreen-menu.js"></script>
