--- a/view-gear.html
+++ b/view-gear.html
@@ -52,6 +52,7 @@
 
     <!-- Load scripts after content is visible -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="helpers.js"></script>
     <script src="utils.js"></script>
     <script src="subplexes.js"></script>
     <script src="gears.js"></script>
