--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
 
 <head>
+  <title>PedalPlex – Guitar & Bass Pedalboard Builder, Tone Presets & Rig Memory</title>
+  <meta name="description" content="PedalPlex helps guitarists and bassists build, save, and recall pedalboard and amp settings. Create visual rigs, store tone presets, and never forget why a tone worked. Free and hardware-agnostic.">
+  <link rel="canonical" href="https://pedalplex.com/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="PedalPlex – Save, Recall & Understand Your Guitar Tones">
+  <meta property="og:description" content="Build visual pedalboards, save knob settings as presets, and recreate your guitar or bass tones months later. PedalPlex is your tone memory.">
+  <meta property="og:url" content="https://pedalplex.com/">
+  <meta property="og:image" content="https://pedalplex.com/logos/splash.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="PedalPlex – Guitar & Bass Tone Memory">
+  <meta name="twitter:description" content="A visual pedalboard builder to save, recall, and understand your guitar and bass tones.">
+  <meta name="twitter:image" content="https://pedalplex.com/logos/splash.png">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PedalPlex</title>
+
   <link rel="icon" href="logos/pedalplex_logo_gradient.png" type="image/x-icon">
   <!-- Carbon Design System -->
   <link rel="stylesheet" href="css/carbon-components.min.css">
@@ -18,6 +31,23 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'G-BX9P5WN5HH');
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "PedalPlex",
+    "applicationCategory": "MultimediaApplication",
+    "operatingSystem": "Web",
+    "description": "PedalPlex is a web-based tool for guitarists and bassists to build pedalboards, save tone presets, and recall amp and pedal settings over time.",
+    "url": "https://pedalplex.com",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    }
+  }
   </script>
 
 </head>
@@ -99,7 +129,22 @@
 
   </main>
 
-  <img src="logos/splash.png" alt="Splash image" style="width:100%; height:auto; margin-top:2rem;" />
+  <img src="logos/splash.png" alt="PedalPlex visual guitar pedalboard and tone preset builder" style="width:100%; height:auto; margin-top:2rem;" />
+
+
+<section id="what-is-pedalplex" style="max-width:800px; margin:5rem auto;text-align:center;">
+  <h2>What is PedalPlex?</h2>
+  <p>
+    PedalPlex is a web-based pedalboard and guitar rig management tool designed for guitarists and bassists.
+    It allows users to visually recreate their real pedalboards and amplifiers, save exact knob and switch
+    positions as tone presets, and organize sounds for songs, sessions, and live performances.
+  </p>
+  <p>
+    Unlike photos or MIDI dumps, PedalPlex focuses on <strong>decision memory</strong>: why a tone works,
+    how it evolved, and how to rebuild it months later without relying on specific hardware.
+  </p>
+</section>
+
 
     <!-- The problem -->
 <section id="the-problem" style="margin:5rem auto; max-width:800px; text-align:center;">
