--- a/gears.html
+++ b/gears.html
@@ -98,14 +98,15 @@
 
     </div>
 
-    <header style="max-width:900px;margin:2rem auto 1rem auto;text-align:left;">
-      <h1 style="font-size:2.25rem; font-weight:700;">Guitar Pedals and Amplifiers Catalog</h1>
+
+    <section id="pedalplex-gears-catalog" style="max-width:800px; margin:5rem auto;text-align:center;">
+      <h1 style="font-size:2.25rem; font-weight:700;">Pedals and Amplifiers Catalog</h1>
       <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
         Browse a growing library of guitar pedals, bass effects, and amplifiers.
         Filter by category, inspect controls, and add gear directly to your pedalboard rigs.
         This catalog is designed for musicians who want to document and recreate real-world tones.
       </p>
-    </header>
+    </section>
 
     <div id="catalog"></div>
 
