--- a/gears.html
+++ b/gears.html
@@ -99,7 +99,7 @@
     </div>
 
 
-    <section id="pedalplex-gears-catalog" style="max-width:900px; margin:1rem auto;text-align:center;">
+    <section id="pedalplex-gears-catalog" style="max-width:900px; margin-top: 1rem; margin-bottom: 2rem; margin-right: auto; margin-left: auto; text-align:center;">
       <h1 style="font-size:2.25rem; font-weight:700;">Pedals and Amplifiers Catalog</h1>
       <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
         Browse a growing library of guitar pedals, bass effects, and amplifiers.
