--- a/gears.html
+++ b/gears.html
@@ -103,6 +103,12 @@
       <h1 style="font-size:2.25rem; font-weight:700;">Pedals and Amplifiers Catalog</h1>
       <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
         Browse a growing library of guitar pedals, bass effects, and amplifiers.
+      </p>
+    </section>
+
+    <section id="about-pedalplex-gears-catalog" style="max-width:900px;margin:2rem auto;text-align:left;">
+      <h2 style="font-size:2rem; color:#fff; font-weight:600">About PedalPlex Gear Catalog</h2>
+      <p style="font-size:1.25rem; margin-top:1rem; margin-bottom:2rem; color:#717171;">
         Filter by category, inspect controls, and add gear directly to your rigs.
         This catalog is designed for musicians who want to document and recreate real-world tones.
       </p>
