--- a/gears.html
+++ b/gears.html
@@ -133,6 +133,7 @@
     <script src="helpers.js"></script>
     <script src="edit-handler.js"></script>
     <script src="utils.js"></script>
+    <script src="subplexes.js"></script>
     <script src="gears.js"></script>
     <script src="fullscreen-menu.js"></script>
     <script src="nav-gears.js"></script>
