--- a/rigs.html
+++ b/rigs.html
@@ -147,6 +147,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="helpers.js"></script>
     <script src="utils.js"></script>
+    <script src="subplexes.js"></script>
     <script src="rigs.js"></script>
     <script src="fullscreen-menu.js"></script>
     <script src="nav-rigs.js"></script>
