--- a/view-gear.html
+++ b/view-gear.html
@@ -42,7 +42,7 @@
         </svg>   
       </a>  
 
-    </div>
+    </div><br>
     <h3 id="gearName" style="text-align:center;"></h3>
     <br><br>
     <div id="preset"></div>
