test bugfix create

--- a/create.html
+++ b/create.html
@@ -11,6 +11,7 @@
     <script>window.isEditMode = true;</script>
     <script src="helpers.js"></script>
     <script src="utils.js"></script>
+    <script src="subplexes.js"></script>
     <script src="create.js"></script>
     
     <style>
