test fix add to rig

--- a/view-gear.html
+++ b/view-gear.html
@@ -61,6 +61,7 @@
     <script src="add-to-rig.js"></script>
     <script src="nav-view.js"></script>
     <script src="view.js"></script>
+    <script src="edit-handler.js"></script>
   </div>
 
 
