--- a/view-gear.html
+++ b/view-gear.html
@@ -57,7 +57,7 @@
     <script src="subplexes.js"></script>
     <script src="gears.js"></script>
     <script src="fullscreen-menu.js"></script>
-    <script src="nav-gears.js"></script>
+    <!-- <script src="nav-gears.js"></script> -->
     <script src="add-to-rig.js"></script>
     <script src="nav-view.js"></script>
     <script src="view.js"></script>
